--- a/.env.local.sample
+++ b/.env.local.sample
@@ -4,3 +4,8 @@ KINDE_ISSUER_URL=https://<your_kinde_subdomain>.kinde.com
 KINDE_SITE_URL=http://localhost:3000
 KINDE_POST_LOGOUT_REDIRECT_URL=http://localhost:3000
 KINDE_POST_LOGIN_REDIRECT_URL=http://localhost:3000/dashboard
+
+MONGO_USER=mileshill
+MONGO_PASSWORD=YTsgxJVUdB5QjUB9
+MONGO_CLUSTER=pulse-docs-dev.bi59lmm.mongodb.net
+MONGO_DATABASE=central
