--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "autoprefixer": "^10.4.20",
     "eslint": "8.56.0",
     "eslint-config-next": "14.1.0",
+    "mongodb": "^6.9.0",
     "next": "14.1.0",
     "postcss": "^8.4.47",
     "react": "18.2.0",
