--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@kinde-oss/kinde-auth-nextjs": "^2.3.10",
     "@mui/icons-material": "^6.1.4",
     "@mui/material": "^6.1.4",
+    "@mui/x-date-pickers": "^7.22.1",
     "@types/node": "20.11.5",
     "@types/react": "18.2.48",
     "@types/react-dom": "18.2.18",
     "autoprefixer": "^10.4.20",
+    "dayjs": "^1.11.13",
     "eslint": "8.56.0",
     "eslint-config-next": "14.1.0",
     "mongodb": "^6.9.0",
