--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@kinde-oss/kinde-auth-nextjs": "^2.3.10",
     "@mui/icons-material": "^6.1.4",
     "@mui/material": "^6.1.4",
+    "@mui/x-data-grid": "^7.22.1",
     "@mui/x-date-pickers": "^7.22.1",
     "@types/node": "20.11.5",
     "@types/react": "18.2.48",
