--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.689.0",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@fontsource/roboto": "^5.1.0",
@@ -16,20 +17,25 @@
     "@mui/material": "^6.1.4",
     "@mui/x-data-grid": "^7.22.1",
     "@mui/x-date-pickers": "^7.22.1",
+    "@types/formidable": "^3.4.5",
     "@types/node": "20.11.5",
     "@types/react": "18.2.48",
     "@types/react-dom": "18.2.18",
     "autoprefixer": "^10.4.20",
+    "aws-sdk": "^2.1692.0",
     "dayjs": "^1.11.13",
     "eslint": "8.56.0",
     "eslint-config-next": "14.1.0",
+    "formidable": "^3.5.2",
     "mongodb": "^6.9.0",
     "next": "14.1.0",
+    "next-connect": "^1.0.0",
     "postcss": "^8.4.47",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^17.0.0 || ^18.0.0",
+    "react-dom": "^17.0.0 || ^18.0.0",
     "tailwindcss": "^3.4.13",
-    "typescript": "5.3.3"
+    "typescript": "5.3.3",
+    "uuid": "^11.0.3"
   },
   "peerDependencies": {
     "react": "^17.0.0 || ^18.0.0",
