--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "ai": "^4.0.11",
     "autoprefixer": "^10.4.20",
     "aws-sdk": "^2.1692.0",
+    "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "eslint": "8.56.0",
     "eslint-config-next": "14.1.0",
@@ -37,6 +38,7 @@
     "openai": "^4.75.0",
     "postcss": "^8.4.47",
     "react": "^17.0.0 || ^18.0.0",
+    "react-datepicker": "^7.5.0",
     "react-dom": "^17.0.0 || ^18.0.0",
     "tailwindcss": "^3.4.13",
     "typescript": "5.3.3",
