--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react": "^17.0.0 || ^18.0.0",
     "react-datepicker": "^7.5.0",
     "react-dom": "^17.0.0 || ^18.0.0",
+    "react-dropzone": "^14.3.5",
     "tailwindcss": "^3.4.13",
     "typescript": "5.3.3",
     "use-debounce": "^10.0.4",
