--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "ai": "^4.0.11",
     "autoprefixer": "^10.4.20",
     "aws-sdk": "^2.1692.0",
+    "bson": "^6.10.1",
+    "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "eslint": "8.56.0",
